--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
+html{
+    scroll-behavior: smooth;
+}
+
 body{
-    background-color: #282828;
     color: white;
     font-family: 'Courier New';
     margin: 0;
+    background-color: #2e2f39;
 }
 
 header{
@@ -31,6 +35,7 @@ header{
     margin: 0;
     width: 100px;
     height: 100%;
+    padding-top: 0px
 }
 
 #css{
@@ -48,7 +53,9 @@ ul{
 a{
     text-decoration: inherit;
     color: inherit;
+    cursor: pointer;
 }
+
 
 li{
     padding: 0 10px;
@@ -75,7 +82,13 @@ li{
 
 main{
     position: relative;
-    padding: 5%;
+    background-color: #282828;
+    top: 100px;
+    padding: 0px 50px
+}
+
+h1{
+    padding-top: 100px;
 }
 
 .boxes{
@@ -91,6 +104,11 @@ main{
     background-color: #3f3f3f;
     padding: 10px;
     box-shadow: 5px 5px 10px black;
+}
+
+hr{
+    margin-top: 50px;
+    width: 90%;
 }
 
 #scroll-up{
